--- a/app/src/main/res/layout/cell_actor.xml
+++ b/app/src/main/res/layout/cell_actor.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/ivActorPhoto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         tools:src="@drawable/actor_robert"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
