--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="background">#191926</color>
     <color name="background_shadow">#161626</color>
+    <color name="movie_line">#636375</color>
+    <color name="movie_background">#222232</color>
     <color name="white">#FFFFFFFF</color>
 
     <color name="genre_rating_color">#FF3466</color>
