--- a/app/src/main/res/layout/cell_movie.xml
+++ b/app/src/main/res/layout/cell_movie.xml
@@ -16,7 +16,7 @@
 
         <ImageView
             android:id="@+id/ivMovie"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
