--- a/app/src/main/res/layout/cell_movie.xml
+++ b/app/src/main/res/layout/cell_movie.xml
@@ -22,7 +22,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/movie" />
+            app:srcCompat="@drawable/movie_avengers" />
 
         <View
             android:layout_width="0dp"
