--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -11,26 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
+        <ru.movie.app.ui.views.CustomImageView
             android:id="@+id/ivMovie"
             android:layout_width="0dp"
             android:layout_height="300dp"
             android:scaleType="centerCrop"
+            app:bottomBackgroundDrawable="@drawable/shape_layer"
+            app:bottomBackgroundHeight="100dp"
             app:layout_constraintBottom_toTopOf="@+id/guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/avengers_img" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:background="@drawable/shape_layer"
-            app:layout_constraintBottom_toBottomOf="@+id/ivMovie"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/btnBack"
