--- a/app/src/main/res/layout/cell_actor.xml
+++ b/app/src/main/res/layout/cell_actor.xml
@@ -11,6 +11,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         tools:src="@drawable/actor_robert"
+        android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
