--- a/app/src/main/res/layout/cell_actor.xml
+++ b/app/src/main/res/layout/cell_actor.xml
@@ -10,7 +10,7 @@
         android:id="@+id/ivActorPhoto"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        tools:src="@drawable/actor_robert"
+        tools:src="@drawable/default_user_avatar"
         android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
